[package]
name = "watra"
version = "0.1.1"
edition = "2021"
description = "CLI application to mutually convert between the Japanese calendar and the Western calendar"
authors = ["PARADISO <paradiso@ymail.ne.jp>"]
readme = "README.md"
repository = "https://github.com/PARA-DISO/watra"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
# TODO: set meta datas
maintainer = "PARADISO <paradiso@ymail.ne.jp>"
copyright = "2024, PARADISO <paradiso@ymail.ne.jp>"
license-file = ["LICENSE", "0"]

[dependencies]
clap ={version="4.5.2",features=["derive"]}
fnv="1.0.7"
indexmap="2.2.5"
regex="1.10.3"
rstest = "0.18.2"